# pagelistbot

./: .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  rust-toolchain
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  test.yml  toolforge.yml
deprecated/cli/: Cargo.toml
deprecated/daemon/: Cargo.toml
deprecated/daemon/src/: arg.rs  main.rs
deprecated/host/src/: functional.rs  host_impl.rs
deprecated/host/src/functional/: finder.rs  task.rs
deprecated/host/src/routine/: rt_finder.rs  rt_refresh.rs
deprecated/interface/src/: error.rs  lib.rs  types.rs
deprecated/interface/src/types/: ast.rs  rpc.rs  site.rs
deprecated/interface/src/types/status/: finder.rs  refresher.rs  task.rs
deprecated/parser/src/parse/: number.rs  parser_types.rs
deprecated/parser/src/parse/test/expr/: expr_tier1.in  expr_tier2.in  incat_expr.in  prefix_expr.in
deprecated/parser/src/parse/test/string/: escaped_char.in  string.in
lib/api_daemon_interface/: Cargo.toml
lib/api_daemon_interface/src/: lib.rs
lib/ast/: Cargo.toml
lib/ast/src/: attribute.rs  expr.rs  lib.rs  modifier.rs  parse_util.rs  span.rs
lib/ast/src/attribute/: mod.rs  parse.rs
lib/ast/src/expr/: mod.rs  parse.rs
lib/ast/src/literal/: mod.rs  parse.rs
lib/ast/src/modifier/: mod.rs  parse.rs
lib/ast/src/token/: mod.rs  parse.rs
lib/env/: Cargo.toml
lib/env/src/: lib.rs
lib/host/: Cargo.toml
lib/host/src/: host_impl.rs  host_util.rs  lib.rs  routine.rs  types.rs
lib/host/src/functional/: finder.rs  refresh.rs  task.rs
lib/host/src/routine/: rt_finder.rs  rt_refresh.rs  rt_task.rs
lib/i18n/: Cargo.toml
lib/i18n/src/: json_loader.rs  lib.rs
lib/interface/: Cargo.toml
lib/interface/src/: cmd.rs  error.rs  lib.rs  rpc.rs  types.rs
lib/interface/src/types/: ast.rs  site.rs  status.rs
lib/interface/src/types/status/: finder.rs  refresher.rs  task.rs
lib/intorinf/: Cargo.toml
lib/intorinf/src/: lib.rs
lib/parser/: Cargo.toml  README.md
lib/parser/src/: ast.rs  lib.rs
lib/parser/src/parse/: expr.rs  mod.rs  modifier.rs  number.rs  string.rs  util.rs
lib/parser/src/parse/test/expr/: embed_expr.in  expr_tier1.in  expr_tier2.in  expr_tier3.in  incat_expr.in  link_expr.in  linkto_expr.in  page_expr.in  prefix_expr.in  toggle_expr.in  whitespaced_expr.in
lib/parser/src/parse/test/modifier/: no_redirect.in
lib/parser_test_macro/: Cargo.toml
lib/provider/: Cargo.toml
lib/provider/src/: api.rs  config.rs  core.rs  lib.rs  pageinfo.rs
lib/provider/src/api/: mod.rs  query.rs
lib/solver/: Cargo.toml
lib/solver/src/: attr.rs  builder.rs  core.rs  cvt_attr.rs  error.rs  lib.rs  recursive_tree.rs  streams.rs  streamsv2.rs
lib/solver/src/streams/: category.rs  counted.rs  cut.rs  pageinfo.rs  query.rs  set.rs  toggle.rs  unique.rs
lib/solver/src/tree/: categorymembers.rs  mod.rs  pageinfo.rs  setop.rs  simplequery.rs  toggle.rs
lib/solver/src/tree/solverstream/: categorymembers.rs  counted.rs  mod.rs  pageinfo.rs  setop.rs  simplequery.rs  toggle.rs  unique.rs
lib/span/: Cargo.toml
lib/span/src/: lib.rs
lib/template_engine/: Cargo.toml
lib/template_engine/src/: lib.rs
lib/trioresult/: Cargo.toml
lib/trioresult/src/: lib.rs
parser/: Cargo.toml  README.md
parser/src/: ast.rs  lib.rs  parse.rs
parser/src/parse/: expr.rs  mod.rs  modifier.rs  number.rs  parser_types.rs  string.rs  util.rs
parser/src/parse/test/: direct_backlink.in  i64.in  link_expr.in  only_redirect.in  recursion_depth.in  result_limit.in
parser/src/parse/test/expr/: embed_expr.in  expr_tier1.in  expr_tier2.in  expr_tier3.in  incat_expr.in  link_expr.in  linkto_expr.in  page_expr.in  prefix_expr.in  toggle_expr.in  whitespaced_expr.in
parser/src/parse/test/modifier/: modifier.in  modifier_list.in  namespace.in  recursion_depth.in  resolve_redirects.in  result_limit.in
parser/src/parse/test/number/: usize_with_inf.in
parser/src/parse/test/string/: unicode.in
parser/test_macro/: Cargo.toml
parser/test_macro/src/: lib.rs
provider/api/: Cargo.toml
provider/api/src/: lib.rs
provider/core/: Cargo.toml
provider/core/src/: lib.rs
solver/core/: Cargo.toml
solver/core/src/: lib.rs
solver/recursive_tree/: Cargo.toml
solver/recursive_tree/src/: lib.rs
src/: main.rs
