[package]
name = "pagelistbot"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "parser",
  "parser/test_macro",
  "solver/core",
  "solver/recursive_tree",
  "provider/core",
  "provider/api",
]

[dependencies]
pagelistbot_parser = { path = "parser", features = [ "parse" ] }

[dev-dependencies]
