[package]
name = "pagelistbot"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "parser",
  "parser/test_macro",
  "solver/core",
  "solver/recursive_tree",
  "provider/core",
  "provider/api",
]

[dependencies]
pagelistbot_parser = { path = "parser", features = [ "parse" ] }
pagelistbot_solver_recursive_tree = { path = "solver/recursive_tree" }
pagelistbot_provider_api = { path = "provider/api" }
mwtitle = "0.1"
mwapi = "0.3.1"
tokio = "1.19"
delay_timer = "0.11"

[dev-dependencies]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
