[package]
name = "pagelistbot-daemon"
version = "3.0.0"
edition = "2021"
repository = "https://github.com/milkydeferwm/pagelistbot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
host = { path = "../../lib/host" }
interface = { path = "../../lib/interface", features = [ "rpc" ] }
async-trait = "0.1"
clap = { version = "4.0.29", features = [ "cargo", "derive" ] }
futures = "0.3"
jsonrpsee = { version = "0.16", features = [ "server" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.22", features = [ "macros", "rt", "rt-multi-thread", "signal" ] }
tracing = { version = "^0.1", features = [ "attributes" ] }

[dev-dependencies]

[[bin]]
name = "pagelistbotd"
path = "src/main.rs"
