[package]
name = "ast"
version = "3.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intorinf = { path = "../intorinf" }
nom_locate = "4"
nom = { version = "7", optional = true, default-features = false, features = [ "alloc" ] }

[features]
parse = [ "nom" ]
