[package]
name = "ast"
version = "3.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intorinf = { path = "../intorinf" }
nom = { version = ">=7.1.3", optional = true, default-features = false, features = [ "alloc" ] }
nom_locate = { version = ">=4.2.0", optional = true }
serde = { version = ">=1.0.156", features = [ "derive" ], optional = true }

[features]
parse = [ "nom", "nom_locate" ]
use_serde = [ "serde" ]
