[package]
name = "host"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../interface", features = [ "use_serde" ] }
parser = { path = "../parser" }
solver = { path = "../solver", features = [ "full" ] }
provider = { path = "../provider", features = [ "full" ] }

chrono = "0.4.22"
cron = "0.12.0"
mwtitle = "0.2.1"
mwapi = "0.4.3"
mwapi_errors = "0.2.2"
mwapi_responses = "0.3.1"
md5 = "0.7.0"

futures = "^0.3"
tokio = { version = "1.19", features = [ "macros" ] }

nom = "7"
nom_locate = "4"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

tracing = { version = "^0.1", features = [ "attributes" ] }

[features]
# "full" = [ "recursive-tree" ]
# "recursive-tree" = [ "provider", "async-recursion" ]
