[package]
name = "parser"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../interface" }
nom = "7"
nom_locate = "4"

[dev-dependencies]
parser_test_macro = { path = "../parser_test_macro" }
