[package]
name = "provider"
version = "4.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../interface" }
mwtitle = { version = "0.2", default-features = false }
futures = "0.3"
itertools = { version = "0.10", optional = true }

mwapi = { version = "0.4.3", optional = true }
mwapi_errors = { version = "0.2.2", optional = true }
mwapi_responses = { version = "0.3.1", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
full = [ "api" ]
api = [
    "itertools",
    "mwtitle/parsing",
    "mwapi",
    "mwapi_errors",
    "mwapi_errors/from-mwtitle",
    "mwapi_responses",
    "serde",
    "serde_json"
]
