[package]
name = "solver"
version = "4.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
intorinf = { path = "../intorinf" }
provider = { path = "../provider" }
trio-result = { path = "../trioresult" }

async-stream = ">=0.3"
futures = "0.3"
mwtitle = { version = "0.2", default-features = false }
pin-project = ">=1.0"
thiserror = ">=1.0.47"
