[package]
name = "pagelistbot_provider_api"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"pagelistbot_parser" = { path = "../../parser" }
"pagelistbot_solver_core" = { path = "../../solver/core" }
"pagelistbot_provider_core" = { path = "../core" }
"mwtitle" = "0.2"
"mwapi" = "0.4.1"
mwapi_errors = "0.2.2"
async-trait = "0.1"
serde_json = "1.0"
