[package]
name = "pagelistbot_provider_core"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"pagelistbot_parser" = { path = "../../parser" }
"pagelistbot_solver_core" = { path = "../../solver/core" }
"mwtitle" = { version = "0.1", default-features = false }
async-trait = "0.1"
